# WALE

./: .buildinfo  .dockerignore  LICENSE  README.html  README.md  dockerfile  environment.yml  genindex.html  index.html  modules.html  objects.inv  overview.html  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  wale.CommonUtils.html  wale.ComputePDF.html  wale.CosmologyModel.html  wale.CovarianceMatrix.html  wale.CriticalPoints.html  wale.FilterFunctions.html  wale.InitializeVariables.html  wale.LoadSimulations.html  wale.RateFunction.html  wale.SpareCode.html  wale.VarianceCalculator.html  wale.html
.doctrees/: README.doctree  environment.pickle  index.doctree  modules.doctree  overview.doctree  wale.CommonUtils.doctree  wale.ComputePDF.doctree  wale.CosmologyModel.doctree  wale.CovarianceMatrix.doctree  wale.CriticalPoints.doctree  wale.FilterFunctions.doctree  wale.InitializeVariables.doctree  wale.LoadSimulations.doctree  wale.RateFunction.doctree  wale.SpareCode.doctree  wale.VarianceCalculator.doctree  wale.doctree
_modules/: index.html
_sources/: index.rst.txt  modules.rst.txt  overview.md.txt  wale.CommonUtils.rst.txt  wale.CosmologyModel.rst.txt  wale.InitializeVariables.rst.txt  wale.SpareCode.rst.txt  wale.rst.txt
data/: filtertophat_results_15_tomobin5_simulationFalse.npy  filtertophat_results_15_tomobin5_simulationTrue.npy  l1_prediction_data_new_cosmos.npy  nz_arrays_bin4.npy  nz_arrays_bin5.npy
docs/: conf.py  index.rst  wale.CovarianceMatrix.rst  wale.RateFunction.rst
doctrees/: environment.pickle  overview.doctree  (+5 more)
(+103 files in other folders)
